2005-06-26  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procman.c: (get_startup_timestamp), (cb_server), (main):
	Fixed startup notification. Closes #172407.
	
	Patch by Davyd Madeley and Paollo Borelli.

2005-06-24  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procactions.c: (renice_single_process),
	(kill_single_process): Fixed confusing error message when libgnomesu is
	not found (used to display "Success").
	
	Original patch by Scott Reeve <sreeves@novell.com>.
	
	Closes #308822.

2005-06-23  Scott Reeves  <sreeves@novell.com>

	* src/procdialogs.c src/procdialogs.h 
	Change priority slider max value to 19 to reflect what is
	allowed by the renice command.
	
	Reviewed by Benoît Dejean  <TazForEver@dlfp.org>.

2005-06-14  Martin Ejdestig  <mejde@dtek.chalmers.se>

	* callbacks.c (cb_update_disks, update_disk, add_new_disks): 
	* interface.c (create_disk_view): 
	Convert device store from tree store to list store. This removes space
	to the left of icons in device list. Closes #307683.

	Reviewed by Benoît Dejean  <TazForEver@dlfp.org>.

2005-06-13  Martin Ejdestig  <mejde@dtek.chalmers.se>

	* procman.c (procman_data_new): 
	* src/gnome-system-monitor.schemas.in:
	Modified default colors to be a little brighter. Closes #305877.
	
	Reviewed by Benoît Dejean  <TazForEver@dlfp.org>.	

2005-06-12  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (cb_timeout), (cb_radio_processes):
	* src/callbacks.h:
	* src/interface.c: (create_proc_view), (create_main_window):
	Moved Show combo box functionality to View menu.
	Closes #305874.

2005-06-11  Martin Ejdestig  <mejde@dtek.chalmers.se>

	* src/callbacks.c: (cb_app_delete), (cb_net_in_color_changed),
	(cb_net_out_color_changed), (cb_change_current_page):
	* src/callbacks.h:
	* src/gnome-system-monitor.schemas.in:
	* src/interface.c: (create_sys_view):
	* src/load-graph.c: (net_scale), (get_net), (load_graph_update),
	(load_graph_unalloc), (load_graph_alloc), (load_graph_new):
	* src/load-graph.h: