@@ -1,3 +1,15 @@
+2005-06-26  Dennis Cranston <dennis_cranston@yahoo.com>
+
+	* src/procdialog.c:  (procdialog_create_preferences_dialog):
+	Fix preference dialog's spacing to be HIG compliant. 
+	
+	* src/infoview.c: (expander_get_label)  Use sentence capitalization.
+	(infoview_create):  Indent contents of expander widget.
+	
+	* src/interface.c: Use header capitalization and add missing
+	mnemonics for new menu items.  (create_disk_view, create_sys_view):
+	Fix the tab border width.
+	
 2005-06-26  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* src/procman.c: (get_startup_timestamp), (cb_server), (main):
